--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       hibernate:
         dialect:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
 
   logging:
