--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/VENTAAUTOSPERU
     username: root
-    password: mysql
+    password: 1234
 
   jpa:
     properties:
@@ -19,3 +19,5 @@ spring:
     level:
       org.hibertane.SQL: DEBUG
       org.hibernate.type: TRACE
+server:
+  port: 8081
