--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/VENTAAUTOSPERU
     username: root
-    password: 1234
+    password: mysql
 
   jpa:
     properties:
