--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/VENTAAUTOSPERU
     username: root
-    password: mysql
+    password: 1234
 
   jpa:
     properties:
@@ -22,4 +22,10 @@ spring:
       org.hibertane.SQL: DEBUG
       org.hibernate.type: TRACE
 server:
-  port: 8080
+  port: 8081
+
+config:
+  security:
+    keySecret: a599a5de-8045-4c1e-9bc2-5c1a5cee42a7
+    jwt:
+      expirationTime: 600000
