--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/VENTAAUTOSPERU
     username: root
-    password: 1234
+    password: mysql
 
   jpa:
     properties:
@@ -14,7 +14,7 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
 
   logging:
@@ -22,7 +22,7 @@ spring:
       org.hibertane.SQL: DEBUG
       org.hibernate.type: TRACE
 server:
-  port: 8081
+  port: 8080
 
 config:
   security:
